<resources>
    <string name="app_name">Studio1B</string>
    <string name="medical_condition_add_button">Add Condition</string>
    <string name="add_medical_condition_field_1">Title:</string>
    <string name="add_medical_condition_field_2">Description:</string>
    <string name="add_medical_condition_edit_field_1">Title</string>
    <string name="add_medical_condition_edit_field_2">Description</string>
    <string name="add_medical_condition_cancel_button">Cancel</string>
    <string name="menu_item_1">Patient Profile</string>
    <string name="menu_item_2">Medical Condition</string>
    <string name="menu_item_3">Consult a Doctor</string>
    <string name="menu_item_4">Facilities near me</string>
    <string name="menu_item_5">Doctor\'s Feedback</string>
    <string name="menu_item_6">Log out</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>
