<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id= "@+id/nav_profile"
        android:title="@string/menu_item_1"
        android:icon="@mipmap/baseline_person_black_24dp"
        />

    <item android:id= "@+id/nav_condition"
        android:title="@string/menu_item_2"
        android:icon="@mipmap/baseline_local_hospital_black_24dp"
        />

    <item android:id= "@+id/nav_consult"
        android:title="@string/menu_item_3"
        android:icon="@mipmap/baseline_contact_mail_black_24dp"
        />

    <item android:id= "@+id/nav_facilities"
        android:title="@string/menu_item_4"
        android:icon="@mipmap/baseline_place_black_24dp"
        />

    <item android:id= "@+id/nav_feedback"
        android:title="@string/menu_item_5"
        android:icon="@mipmap/baseline_inbox_black_24dp"
        />

    <item android:id= "@+id/nav_logout"
        android:title="@string/menu_item_6"
        android:icon="@mipmap/baseline_exit_to_app_black_24dp"
        />

</menu>